# core

./: CMakeLists.txt
include/: blob.hpp  core.hpp  event.hpp  file.hpp  json.hpp  keyboard.hpp  linkage.hpp  log.hpp  maths.hpp  matrix.hpp  mouse.hpp  node.hpp  random.hpp  resource.hpp  serialize.hpp  state.hpp  update_timer.hpp  utility.hpp  vector.hpp
include/detail/: vector_base.hpp
src/: file.cpp  log.cpp  random.cpp  resource.cpp  serialize.cpp  update_timer.cpp
